# crew_fin_anal

./: one.ipynb
fin_anal/: README.md  pyproject.toml
fin_anal/output/: analysis_report_BlackRock.md  research_data_BlackRock.md
fin_anal/src/fin_anal/: crew.py  main.py
fin_anal/src/fin_anal/config/: agents.yaml  tasks.yaml
